spacing fixed

--- a/mod2_solution/styles.css
+++ b/mod2_solution/styles.css
@@ -18,10 +18,10 @@ body{
     position: relative;
     min-height: 20px;
     margin-right: 30px;
-    margin-left: 15px;
+    margin-left: 5px;
     margin-bottom: 30px;
     padding: 20px;
-    min-width: 300px;
+    min-width: 200px;
 }
 
 .heading{
